--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,14 @@
 
 /* Your CSS Code here. */
+.holder{
+	width:100px;
+	height:200px;
+	display:flex;
+}
+.item-1{
+	justify-content:center;
+	flex-wrap:wrap;
+	width:100px;
+	height:100px;
+	background-color:red;
+}
