--- a/styles.css
+++ b/styles.css
@@ -2,13 +2,14 @@
 /* Your CSS Code here. */
 .holder{
 	width:100px;
-	height:200px;
+	height:200px
+	display:flex;
+	justify-content:center;
+	align-items:center;
 	
 }
 .item-1{
-	display:flex;
-	justify-content:center;
-	flex-wrap:wrap;
+	
 	width:100px;
 	height:100px;
 	background-color:red;
