--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@
 /* Your CSS Code here. */
 .holder{
 	width:100px;
-	height:200px
+	height:200px;
 	display:flex;
 	justify-content:center;
 	align-items:center;
